; ModuleID = '/home/carl/AnghaBench/git/extr_remote.c_one_local_ref.c'
source_filename = "/home/carl/AnghaBench/git/extr_remote.c_one_local_ref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object_id = type { i32 }
%struct.ref = type { %struct.ref*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.object_id*, i32, i8*)* @one_local_ref to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @one_local_ref(i8* %0, %struct.object_id* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca %struct.object_id*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca %struct.ref***, align 8
  %11 = alloca %struct.ref*, align 8
  store i8* %0, i8** %6, align 8
  store %struct.object_id* %1, %struct.object_id** %7, align 8
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  %12 = load i8*, i8** %9, align 8
  %13 = bitcast i8* %12 to %struct.ref***
  store %struct.ref*** %13, %struct.ref**** %10, align 8
  %14 = load i8*, i8** %6, align 8
  %15 = getelementptr inbounds i8, i8* %14, i64 5
  %16 = call i64 @check_refname_format(i8* %15, i32 0)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %32

19:                                               ; preds = %4
  %20 = load i8*, i8** %6, align 8
  %21 = call %struct.ref* @alloc_ref(i8* %20)
  store %struct.ref* %21, %struct.ref** %11, align 8
  %22 = load %struct.ref*, %struct.ref** %11, align 8
  %23 = getelementptr inbounds %struct.ref, %struct.ref* %22, i32 0, i32 1
  %24 = load %struct.object_id*, %struct.object_id** %7, align 8
  %25 = call i32 @oidcpy(i32* %23, %struct.object_id* %24)
  %26 = load %struct.ref*, %struct.ref** %11, align 8
  %27 = load %struct.ref***, %struct.ref**** %10, align 8
  %28 = load %struct.ref**, %struct.ref*** %27, align 8
  store %struct.ref* %26, %struct.ref** %28, align 8
  %29 = load %struct.ref*, %struct.ref** %11, align 8
  %30 = getelementptr inbounds %struct.ref, %struct.ref* %29, i32 0, i32 0
  %31 = load %struct.ref***, %struct.ref**** %10, align 8
  store %struct.ref** %30, %struct.ref*** %31, align 8
  store i32 0, i32* %5, align 4
  br label %32

32:                                               ; preds = %19, %18
  %33 = load i32, i32* %5, align 4
  ret i32 %33
}

declare dso_local i64 @check_refname_format(i8*, i32) #1

declare dso_local %struct.ref* @alloc_ref(i8*) #1

declare dso_local i32 @oidcpy(i32*, %struct.object_id*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
